white space, using 4 spaces as js indentation

--- a/README
+++ b/README
@@ -1,3 +1,7 @@
-== Welcome to Rails
+== Initial Fantasy
 
 I have such big hopes for this, but I don't have a lot of free time.  Solution:  Open Source.  Create an issue if you have an interest in working on something related to this.  
+
+Demo:  initialfantasy.com
+
+
