--- a/changelog
+++ b/changelog
@@ -121,7 +121,7 @@ Make it so image data is loaded as needed... and cached... and a func can be cal
      the frames the way I was trying at first!
      The erase steaks appear through the mob, and then radiate outwards from the
      equator of the mob!  It's awesome in slow mo, but you can't step frames and see it.
-     
+
   1) Fade blue/ purple (first tick)
   2) Stay faded/ do nothing (second tick)
   3) Erase lines through mobs 1-2 pixels wide
@@ -145,6 +145,17 @@ Make it so image data is loaded as needed... and cached... and a func can be cal
 - dmg points animation
 - mob death animation
 
+
+SWING ANIMATION:
+  Fight is clicked
+  Mob is chosen
+  ->
+    * actor's timer bar is set to zero and set to 'frozen' state
+    * A 'fight' animation is set on the hero's animations list
+      * With that fight animation, it's update() and render() methods are
+        invoked on battleScreen.Update() and battleScreen.Render() respectively
+    * Eventually, after update() is called enough times, the animation will
+      complete and it will remove itself from the hero
 
 COMPLETE:
   - Fixed browser compatibility issue by hacking the font
