fixed bug where waitBars weren't really freezing, they just weren't rendered

--- a/changelog
+++ b/changelog
@@ -165,6 +165,13 @@ SWING ANIMATION:
 
 
 
+:: REWORK SYSTEM FLOW... ::
+
+- HoverEffect_simpleBird should be an animation applied directly to units with 'flying'
+  - Need to get per unit animations laid out first...
+
+
+
 COMPLETE:
   - Fixed browser compatibility issue by hacking the font
   - BugFix:  removed the now pointless edge conditionals webkitRequestAnimationFrame
