repositioning files to be more intuitive

--- a/README
+++ b/README
@@ -1,7 +1,8 @@
 == Initial Fantasy
 
-I have such big hopes for this, but I don't have a lot of free time.  Solution:  Open Source.  Create an issue if you have an interest in working on something related to this.  
+I have such big hopes for this, but I don't have a lot of free time.  Solution:  Open Source.  Create an issue if you have an interest in working on something related to this.
+
+Of course the game assets are not our property, rather they are being borrowed
+in good faith from elsewhere and as such they are subject to revocation at any time.
 
 Demo:  initialfantasy.com
-
-
